[package]
name = "ipfs-track"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
futures = "0.3.31"
libp2p = { version = "0.55.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
